--- a/styles/solarized_light.yml
+++ b/styles/solarized_light.yml
@@ -17,17 +17,17 @@
 #
 plain:
  foregrounds:
-  0: 93a1a1
+  0: 586e75
 # backgrounds:
 #  0: 002b36
- current_line_foreground: 586e75
- currentline: 586e75
+ current_line_foreground: 93a1a1
+ currentline: 93a1a1
  colors:
   wxSTC_STYLE_DEFAULT:
-   foreground: 073642
+   foreground: eee8d5
   wxSTC_STYLE_LINENUMBER:
-   background: 073642
-   foreground: 586e75
+   background: eee8d5
+   foreground: 93a1a1
   wxSTC_STYLE_BRACELIGHT:
   wxSTC_STYLE_BRACEBAD:
   wxSTC_STYLE_CONTROLCHAR:
@@ -40,7 +40,7 @@ plain:
 # default style (load after plain)
 #
 padre:
- background:  002b36
+ background:  fdf6e3
  colors:
   PADRE_BLACK:
    foreground: 93a1a1
@@ -63,11 +63,11 @@ padre:
 # application/x-perl
 #
 perl:
- background: 002b36
+ background: fdf6e3
  colors:
 # highlight two braces
   wxSTC_STYLE_BRACELIGHT:
-   foreground: eee8d5
+   foreground: 073642
 # ??
   wxSTC_STYLE_BRACEBAD:
    foreground: ff0000
@@ -79,7 +79,7 @@ perl:
    foreground: ff0000
 # comment
   wxSTC_PL_COMMENTLINE:
-   foreground: 586e75
+   foreground: 93a1a1
 # pod
   wxSTC_PL_POD:
    foreground: 657b83
@@ -109,7 +109,7 @@ perl:
    foreground: 268bd2
 # all words like qw(sub for first)
   wxSTC_PL_IDENTIFIER:
-   foreground: 839496
+   foreground: 657b83
 # $scalar
   wxSTC_PL_SCALAR:
    foreground: b58900
@@ -121,7 +121,7 @@ perl:
    foreground: dc322f
 # *{symbol}
   wxSTC_PL_SYMBOLTABLE:
-   foreground: eee8d5
+   foreground: 073642
 # missing SCE_PL_VARIABLE_INDEXER (16)
   wxSTC_PL_REGEX:
    foreground: d33682
@@ -178,20 +178,20 @@ perl:
 # text/x-perlxs
 #
 xs:
- background: 002b36
+ background: fdf6e3
  colors:
   wxSTC_STYLE_BRACELIGHT:
-   foreground: eee8d5
+   foreground: 073642
   wxSTC_STYLE_BRACEBAD:
    foreground: dc322f
   wxSTC_C_DEFAULT:
    foreground: 657b83
   wxSTC_C_COMMENT:
-   foreground: 586e75
+   foreground: 93a1a1
   wxSTC_C_COMMENTLINE:
-   foreground: 586e75
+   foreground: 93a1a1
   wxSTC_C_COMMENTDOC:
-   foreground: 586e75
+   foreground: 93a1a1
   wxSTC_C_NUMBER:
    foreground: 2aa198
   wxSTC_C_WORD:
@@ -216,7 +216,7 @@ xs:
   wxSTC_C_REGEX:
    foreground: ff007f
   wxSTC_C_COMMENTLINEDOC:
-   foreground: 586e75
+   foreground: 93a1a1
   wxSTC_C_WORD2:
    foreground: 6c71c4
    bold: 1
@@ -233,18 +233,18 @@ xs:
 # text/x-patch
 #
 diff:
- background: 002b36
+ background: fdf6e3
  colors:
   wxSTC_DIFF_DEFAULT:
    foreground: 657b83
   wxSTC_DIFF_COMMENT:
-   foreground: 586e75
+   foreground: 93a1a1
    bold:       1
    italic:     1
    eolfilled:  1
    underline:  1
   wxSTC_DIFF_COMMAND:
-   foreground: 93a1a1
+   foreground: 586e75
   wxSTC_DIFF_HEADER:
    foreground: 859900
   wxSTC_DIFF_POSITION:
@@ -258,13 +258,14 @@ diff:
 # text/x-makefile
 #
 make:
+ background: fdf6e3
  colors:
   wxSTC_MAKE_DEFAULT:
    foreground: 657b83
   wxSTC_MAKE_COMMENT:
-   foreground: 586e75
-  wxSTC_MAKE_PREPROCESSOR:
    foreground: 93a1a1
+  wxSTC_MAKE_PREPROCESSOR:
+   foreground: 586e75
   wxSTC_MAKE_IDENTIFIER:
    foreground: 859900
   wxSTC_MAKE_OPERATOR:
@@ -278,12 +279,12 @@ make:
 # text/x-yaml
 #
 yaml:
- background: 002b36
+ background: fdf6e3
  colors:
   wxSTC_YAML_DEFAULT:
    foreground: 859900
   wxSTC_YAML_COMMENT:
-   foreground: 586e75
+   foreground: 93a1a1
   wxSTC_YAML_IDENTIFIER:
    foreground: 268bd2
    bold:       1
@@ -295,14 +296,14 @@ yaml:
    foreground: 2aa198
   wxSTC_YAML_DOCUMENT:
    foreground: 859900
-   background: eee8d5
+   background: 073642
    bold:       1
    eolfilled:  1
   wxSTC_YAML_TEXT:
    foreground: 333366
   wxSTC_YAML_ERROR:
    foreground: 859900
-   background: eee8d5
+   background: 073642
    bold:       1
    eolfilled:  1
 
@@ -310,7 +311,7 @@ yaml:
 # text/css1
 #
 css:
- background:  002b36
+ background: fdf6e3
  colors:
   wxSTC_CSS_DEFAULT:
    foreground: 657b83
@@ -321,9 +322,9 @@ css:
    foreground: 268bd2
    bold:       1
   wxSTC_CSS_PSEUDOCLASS:
-   foreground: 839496
+   foreground: 657b83
   wxSTC_CSS_UNKNOWN_PSEUDOCLASS:
-   foreground: 839496
+   foreground: 657b83
    bold:       1
   wxSTC_CSS_OPERATOR:
    foreground: cb4b16
@@ -331,67 +332,67 @@ css:
   wxSTC_CSS_IDENTIFIER:
    foreground: d33682
   wxSTC_CSS_UNKNOWN_IDENTIFIER:
-   foreground: 839496
+   foreground: 657b83
    bold:       1
   wxSTC_CSS_VALUE:
    foreground: 859900
   wxSTC_CSS_COMMENT:
-   foreground: 586e75
+   foreground: 93a1a1
   wxSTC_CSS_ID:
    foreground: 2aa198
    bold:       1
   wxSTC_CSS_IMPORTANT:
-   foreground: 839496
+   foreground: 657b83
   wxSTC_CSS_DIRECTIVE:
-   foreground: 839496
+   foreground: 657b83
   wxSTC_CSS_DOUBLESTRING:
-   foreground: 839496
+   foreground: 657b83
   wxSTC_CSS_SINGLESTRING:
-   foreground: 839496
+   foreground: 657b83
   wxSTC_CSS_IDENTIFIER2:
-   foreground: 839496
+   foreground: 657b83
   wxSTC_CSS_ATTRIBUTE:
-   foreground: 839496
+   foreground: 657b83
 
 #
 # conf: text/plain
 #
 conf:
- background: 002b36
+ background: fdf6e3
  colors:
   wxSTC_CONF_DEFAULT:
    foreground: 657b83
   wxSTC_CONF_COMMENT:
-   foreground: 586e75
+   foreground: 93a1a1
   wxSTC_CONF_NUMBER:
    foreground: 2aa198
   wxSTC_CONF_IDENTIFIER:
    foreground: b58900
   wxSTC_CONF_EXTENSION:
-   foreground: 839496
+   foreground: 657b83
   wxSTC_CONF_PARAMETER:
    foreground: d33682
   wxSTC_CONF_STRING:
    foreground: cb4b16
   wxSTC_CONF_OPERATOR:
-   foreground: 93a1a1
+   foreground: 586e75
   wxSTC_CONF_IP:
    foreground: 859900
   wxSTC_CONF_DIRECTIVE:
-   foreground: 839496
+   foreground: 657b83
 
 #
 # javascript
 #
 javascript:
- background: 002b36
+ background: fdf6e3
  colors:
   wxSTC_HJA_COMMENT:
-   foreground: 586e75
+   foreground: 93a1a1
   wxSTC_HJA_COMMENTDOC:
-   foreground: 586e75
+   foreground: 93a1a1
   wxSTC_HJA_COMMENTLINE:
-   foreground: 586e75
+   foreground: 93a1a1
   wxSTC_HJA_DEFAULT:
    foreground: 657b83
   wxSTC_HJA_DOUBLESTRING:
@@ -405,11 +406,11 @@ javascript:
   wxSTC_HJA_SINGLESTRING:
    foreground: 6c71c4
   wxSTC_HJA_START:
-   foreground: eee8d5
+   foreground: 073642
   wxSTC_HJA_STRINGEOL:
    foreground: dc322f
   wxSTC_HJA_SYMBOLS:
    foreground: cb4b16
   wxSTC_HJA_WORD:
-   foreground: 93a1a1
+   foreground: 586e75
 
